--- a/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
@@ -22,7 +22,8 @@ data:
 {{- end }}
 {{- end }}
 {{- end }}
-{{- with required ".postgres.password is required" .postgres.password }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService..postgres.password" "secretProperty" .postgres.password)) }}
+{{- with .postgres.password }}
 {{- with .value }}
   POSTGRES_PASSWORD: {{ . | b64enc }}
 {{- end }}
@@ -52,13 +53,11 @@ data:
   ECDSA_PRIME256V1_PRIVATE_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaSecp256k1" "secretProperty" .ecdsaSecp256k1 "initIfAbsent" true)) }}
 {{- with .ecdsaSecp256k1 }}
 {{- with .value }}
   ECDSA_SECP256K1_PRIVATE_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaSecp384r1" "secretProperty" .ecdsaSecp384r1 "initIfAbsent" true)) }}
 {{- with .ecdsaSecp384r1 }}
 {{- with .value }}
   ECDSA_SECP384R1_PRIVATE_KEY: {{ . | b64enc}}
