--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -566,7 +566,7 @@ matrixAuthenticationService:
   image:
     ## The host and (optional) port of the container image registry for this component.
     ## If not specified Docker Hub is implied
-    registry: docker.io
+    registry: ghcr.io
 
     ## The path in the registry where the container image is located
     repository: element-hq/matrix-authentication-service
