pytest: successfully run MAS tests

--- a/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
+++ b/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
@@ -43,7 +43,8 @@ matrixAuthenticationService:
   enabled: true
 
   ingress:
-    host: mas.ess-enterprise.localhost
+    tlsSecret: "{{ $.Release.Name }}-mas-web-tls"
+    host: mas.{{ $.Values.serverName }}
 
   postgres:
     host: "{{ $.Release.Name }}-mas-postgresql"
