--- a/charts/matrix-stack/ci/pytest-synapse-values.yaml
+++ b/charts/matrix-stack/ci/pytest-synapse-values.yaml
@@ -42,5 +42,8 @@ synapse:
 elementWeb:
   enabled: false
 
+matrixAuthenticationService:
+  enabled: false
+
 wellKnownDelegation:
   enabled: false
