--- a/charts/matrix-stack/ci/pytest-well-known-values.yaml
+++ b/charts/matrix-stack/ci/pytest-well-known-values.yaml
@@ -17,6 +17,9 @@ synapse:
 elementWeb:
   enabled: false
 
+matrixAuthenticationService:
+  enabled: false
+
 wellKnownDelegation:
   ingress:
     tlsSecret: "{{ $.Release.Name }}-well-known-web-tls"
