fix ci values files with MAS enabled by default

--- a/charts/matrix-stack/ci/element-web-minimal-values.yaml
+++ b/charts/matrix-stack/ci/element-web-minimal-values.yaml
@@ -9,6 +9,9 @@ elementWeb:
   ingress:
     host: element.ess.localhost
 
+matrixAuthenticationService:
+  enabled: false
+
 synapse:
   enabled: false
 
