--- a/charts/matrix-stack/ci/synapse-additonal-settings-values.yaml
+++ b/charts/matrix-stack/ci/synapse-additonal-settings-values.yaml
@@ -7,6 +7,9 @@ serverName: ess.localhost
 elementWeb:
   enabled: false
 
+matrixAuthenticationService:
+  enabled: false
+
 synapse:
   ingress:
     host: synapse.ess.localhost
