--- a/charts/matrix-stack/ci/synapse-checkov-with-workers-values.yaml
+++ b/charts/matrix-stack/ci/synapse-checkov-with-workers-values.yaml
@@ -10,6 +10,9 @@ initSecrets:
 elementWeb:
   enabled: false
 
+matrixAuthenticationService:
+  enabled: false
+
 haproxy:
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
