--- a/charts/matrix-stack/ci/matrix-authentication-service-checkov-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-checkov-values.yaml
@@ -8,27 +8,28 @@ initSecrets:
   enabled: false
 
 elementWeb:
-  additional: {
-    "default_server_config": {
-      "m.homeserver": {
-        "base_url": "https://element.ess.localhost",
-      }
-    },
-  }
+  enabled: false
 
+matrixAuthenticationService:
   ingress:
-    host: element.ess.localhost
+    host: mas.ess.localhost
+
+  postgres:
+    host: postgres
+    user: mas
+    database: mas
+    password:
+      value: CHANGEME-teel5aghaenohhohghiavee5Koh8ahwo
 
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
     checkov.io/skip2: CKV_K8S_43=No digests
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
 
-matrixAuthenticationService:
-  enabled: false
-
 synapse:
   enabled: false
+  ingress:
+    host: synapse.ess.localhost
 
 wellKnownDelegation:
   enabled: false
