--- a/charts/matrix-stack/ci/synapse-worker-example-values.yaml
+++ b/charts/matrix-stack/ci/synapse-worker-example-values.yaml
@@ -10,6 +10,9 @@ initSecrets:
 elementWeb:
   enabled: false
 
+matrixAuthenticationService:
+  enabled: false
+
 synapse:
   ingress:
     host: synapse.ess.localhost
