--- a/charts/matrix-stack/ci/well-known-synapse-values.yaml
+++ b/charts/matrix-stack/ci/well-known-synapse-values.yaml
@@ -10,6 +10,9 @@ initSecrets:
 elementWeb:
   enabled: false
 
+matrixAuthenticationService:
+  enabled: false
+
 synapse:
   enabled: true
   ingress:
