--- a/charts/matrix-stack/ci/well-known-mas-values.yaml
+++ b/charts/matrix-stack/ci/well-known-mas-values.yaml
@@ -1,20 +1,17 @@
-# Copyright 2025 New Vector Ltd
+# Copyright 2024 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
-
-## Values file containing minimal values for components that are enabled by default only
-
-elementWeb:
-  enabled: false
 
 serverName: ess.localhost
 
 initSecrets:
   enabled: false
 
+elementWeb:
+  enabled: false
+
 matrixAuthenticationService:
   enabled: true
-
   ingress:
     host: mas.ess.localhost
 
@@ -24,17 +21,6 @@ matrixAuthenticationService:
     database: mas
     password:
       value: CHANGEME-teel5aghaenohhohghiavee5Koh8ahwo
-
-  additional:
-    0000-email:
-      config: |
-        email:
-          host: email.dev.local
-          port: 587
-          username: smtpuser
-          tlsMode: STARTTLS
-          from: "MAS <noreply@auth.dev.local>"
-          password: CHANGEME-5ahohhohgihavee5Ko
 
   encryptionSecret:
     value: CHANGEME-ahohhohgiavee5Koh8ahwo
@@ -55,16 +41,6 @@ matrixAuthenticationService:
         AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
         AwEAAKBcZW5jb2duZXQwgggYMIINL6Ado018734nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEH
         ------END EC PRIVATE KEY-----
-    ecdsaSecp256k1:
-      value: |
-        -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEZFQZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        ------END EC PRIVATE KEY-----
-    ecdsaSecp384r1:
-      value: |
-       -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEZFQZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        ------END EC PRIVATE KEY-----
 
 synapse:
   enabled: false
@@ -72,4 +48,4 @@ synapse:
     host: synapse.ess.localhost
 
 wellKnownDelegation:
-  enabled: false
+  enabled: true
