--- a/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
@@ -126,6 +126,21 @@ spec:
                   )
                 )
             }}
+        - name: SYNAPSE_OIDC_CLIENT_SECRET
+          value: >-
+            {{
+              printf "{{ readfile \"/secrets/%s\" | quote }}" (
+                 include "element-io.ess-library.init-secret-path" (
+                     dict "root" $
+                     "context" (dict
+                       "secretProperty" .synapseOIDCClientSecret
+                       "initSecretKey" "MAS_SYNAPSE_OIDC_CLIENT_SECRET"
+                       "defaultSecretName" (printf "%s-matrix-authentication-service" $.Release.Name)
+                       "defaultSecretKey" "SYNAPSE_OIDC_CLIENT_SECRET"
+                     )
+                  )
+                )
+            }}
 {{- with .resources }}
         resources:
           {{- toYaml . | nindent 10 }}
