--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -148,6 +148,38 @@ We have an init container to render & merge the config for several reasons:
                     )
                   )
               }}
+{{- if $.Values.matrixAuthenticationService.enabled }}
+          - name: MAS_SHARED_SECRET
+            value: >-
+              {{
+              printf "{{ readfile \"/secrets/%s\" | quote }}" (
+                 include "element-io.ess-library.init-secret-path" (
+                     dict "root" $
+                     "context" (dict
+                       "secretProperty" $.Values.matrixAuthenticationService.synapseSharedSecret
+                       "initSecretKey" "MAS_SYNAPSE_SHARED_SECRET"
+                       "defaultSecretName" (printf "%s-matrix-authentication-service" $.Release.Name)
+                       "defaultSecretKey" "SYNAPSE_SHARED_SECRET"
+                     )
+                  )
+                )
+              }}
+          - name: MAS_OIDC_CLIENT_SECRET
+            value: >-
+              {{
+                printf "{{ readfile \"/secrets/%s\" | quote }}" (
+                  include "element-io.ess-library.init-secret-path" (
+                      dict "root" $
+                      "context" (dict
+                        "secretProperty" $.Values.matrixAuthenticationService.synapseOIDCClientSecret
+                        "initSecretKey" "MAS_SYNAPSE_OIDC_CLIENT_SECRET"
+                        "defaultSecretName" (printf "%s-matrix-authentication-service" $.Release.Name)
+                        "defaultSecretKey" "SYNAPSE_OIDC_CLIENT_SECRET"
+                      )
+                    )
+                  )
+              }}
+{{- end }}
           - name: APPLICATION_NAME
             value: >-
               {{ printf "{{ hostname | replace \"-synapse-\" \"\" }}" }}
