--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -642,6 +642,17 @@ matrixAuthenticationService:
   ##   secretKey: key-in-secret
   synapseSharedSecret: {}
 
+  ## Synapse - MAS OIDC Client Secret.
+  ## It can either be provided inline in the Helm chart e.g.:
+  ## synapseOIDCClientSecret:
+  ##   value: SecretValue
+  ##
+  ## Or it can be provided via an existing Secret e.g.:
+  ## synapseOIDCClientSecret:
+  ##   secret: existing-secret
+  ##   secretKey: key-in-secret
+  synapseOIDCClientSecret: {}
+
   ## Additional configuration to provide to Matrix Authentication Service.
   ## Each key under additional is an additioanal config to merge into Matrix Authentication Service config.yaml
   ## Full details on available configuration options can be found at https://element-hq.github.io/matrix-authentication-service/reference/configuration.html
