--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -103,22 +103,18 @@ jobs:
 
     - name: Run kubeconform
       run: |
-        for subchart in charts/*; do
-          for values in $(find "$subchart"/ci -name '*values.yaml'); do
-            echo "Testing $subchart with $values";
-            helm template -f "$values" "$subchart" | kubeconform -summary
-          done
+        for values in charts/matrix-stack/ci/*values.yaml; do
+          echo "Testing matrix-stack with $values";
+          helm template -f "$values" charts/matrix-stack | kubeconform -summary
         done
 
     - name: Run checkov
       run: |
         checkov --version
         export HELM_NAMESPACE=ess
-        for subchart in charts/*; do
-          for checkov_values in $(find "$subchart"/ci -name '*checkov*values.yaml'); do
-            echo "Testing $subchart with $checkov_values";
-            checkov -d "$subchart" --framework helm --var-file "$checkov_values" --quiet
-          done
+        for checkov_values in charts/matrix-stack/ci/*checkov*values.yaml; do
+          echo "Testing matrix-stack with $checkov_values";
+          checkov -d "charts/matrix-stack" --framework helm --var-file "$checkov_values" --quiet
         done
 
     - name: Run our manifest tests
