pytest: add a dedicated admin client in mas

--- a/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
+++ b/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
@@ -46,6 +46,11 @@ matrixAuthenticationService:
     tlsSecret: "{{ $.Release.Name }}-mas-web-tls"
     host: mas.{{ $.Values.serverName }}
 
+  additional:
+    000-pytest-admin:
+      configSecret: "{{ $.Release.Name }}-pytest-admin"
+      configSecretKey: "admin.yaml"
+
   postgres:
     host: "{{ $.Release.Name }}-mas-postgresql"
     user: mas_user
