matrix-tools: replace -debug with env var

--- a/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
+++ b/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
@@ -42,6 +42,10 @@ synapse:
 matrixAuthenticationService:
   enabled: true
 
+  extraEnv:
+  - name: DEBUG_RENDERING
+    value: "1"
+
   ingress:
     tlsSecret: "{{ $.Release.Name }}-mas-web-tls"
     host: mas.{{ $.Values.serverName }}
