--- a/charts/matrix-stack/ci/pytest-synapse-values.yaml
+++ b/charts/matrix-stack/ci/pytest-synapse-values.yaml
@@ -14,6 +14,10 @@ synapse:
       configSecret: "{{ $.Release.Name }}-synapse-secrets"
       configSecretKey: "01-other-user-config.yaml"
 
+  extraEnv:
+  - name: DEBUG_RENDERING
+    value: "1"
+
   registrationSharedSecret:
     secret: "{{ $.Release.Name }}-synapse-secrets"
     secretKey: registrationSharedSecret
