Refactor Synapse optional integration in MAS
- Mark the whole MAS matrix configuration as optional
- Update init-secrets template
- Modify deployment to conditionally include Synapse secrets
- Refine Secret template for optional Synapse OIDC client secret

--- a/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
@@ -110,6 +110,7 @@ spec:
                   )
                 )
             }}
+{{- if $.Values.synapse.enabled }}
         - name: SYNAPSE_SHARED_SECRET
           value: >-
             {{
@@ -140,6 +141,7 @@ spec:
                   )
                 )
             }}
+{{- end }}
 {{- with .resources }}
         resources:
           {{- toYaml . | nindent 10 }}
