--- a/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
@@ -28,10 +28,17 @@ data:
   POSTGRES_PASSWORD: {{ . | b64enc }}
 {{- end }}
 {{- end }}
+{{- if $.Values.synapse.enabled }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.synapseSharedSecret" "secretProperty" .synapseSharedSecret "initIfAbsent" true)) }}
 {{- with .synapseSharedSecret }}
 {{- with .value }}
   SYNAPSE_SHARED_SECRET: {{ . | b64enc }}
+{{- end }}
+{{- end }}
+{{- with .synapseOIDCClientSecret }}
+{{- with .value }}
+  SYNAPSE_OIDC_CLIENT_SECRET: {{ . | b64enc }}
+{{- end }}
 {{- end }}
 {{- end }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.encryptionSecret" "secretProperty" .encryptionSecret "initIfAbsent" true)) }}
