--- a/charts/matrix-stack/ci/matrix-authentication-service-external-synapse-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-external-synapse-values.yaml
@@ -23,11 +23,17 @@ matrixAuthenticationService:
     password:
       value: CHANGEME-teel5aghaenohhohghiavee5Koh8ahwo
 
-  synapseSharedSecret:
-    value: CHANGEME-iaw8eeSef4zeefie8ii3akien9tiaYah
-
-  synapseOIDCClientSecret:
-    value: CHANGEME-eiv6wae8shooPhie4ief8ru2egahbah0
+  additional:
+    0000-matrix-server:
+      config: |
+        clients:
+        - client_id: "0000000000000000000SYNAPSE"
+          client_auth_method: client_secret_basic
+          client_secret: CHANGEME-eiv6wae8shooPhie4ief8ru2egahbah0
+        matrix:
+          homeserver: "external.localhost
+          secret: jaix6Am9Shut7zeiduu7ua5maengag3o
+          endpoint: https://syn.external.localhost
 
   encryptionSecret:
     value: CHANGEME-ahohhohgiavee5Koh8ahwo
@@ -45,16 +51,7 @@ matrixAuthenticationService:
         AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
         AwEAAKBcZW5jb2duZXQwgggYMIINL6Ado018734nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEH
         ------END EC PRIVATE KEY-----
-    ecdsaSecp256k1:
-      value: |
-        -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEZFQZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        ------END EC PRIVATE KEY-----
-    ecdsaSecp384r1:
-      value: |
-       -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEZFQZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        ------END EC PRIVATE KEY-----
+
 
 synapse:
   enabled: false
