Init Secret: the Pod should have labels too

--- a/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
+++ b/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
@@ -63,6 +63,10 @@ matrixAuthenticationService:
       secret: "{{ $.Release.Name }}-mas-postgres-db"
       secretKey: password
 
+initSecrets:
+  annotations:
+    has-no-service-monitor: "true"
+
 elementWeb:
   enabled: false
 
