--- a/charts/matrix-stack/ci/matrix-authentication-service-minimal-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-minimal-values.yaml
@@ -8,7 +8,7 @@ elementWeb:
   enabled: false
 
 initSecrets:
-  enabled: false
+  enabled: true
 
 matrixAuthenticationService:
   enabled: true
@@ -23,38 +23,6 @@ matrixAuthenticationService:
     password:
       value: CHANGEME-teel5aghaenohhohghiavee5Koh8ahwo
 
-  synapseSharedSecret:
-    value: CHANGEME-iaw8eeSef4zeefie8ii3akien9tiaYah
-
-  synapseOIDCClientSecret:
-    value: CHANGEME-eiv6wae8shooPhie4ief8ru2egahbah0
-
-  encryptionSecret:
-    value: CHANGEME-ahohhohgiavee5Koh8ahwo
-
-  privateKeys:
-    rsa:
-      value: |
-        -----BEGIN RSA PRIVATE KEY-----
-        MIIEowIBAAKCAQEA6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        ------END RSA PRIVATE KEY-----
-    ecdsaPrime256v1:
-      value: |
-        -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEIYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        AwEAAKBcZW5jb2duZXQwgggYMIINL6Ado018734nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEH
-        ------END EC PRIVATE KEY-----
-    ecdsaSecp256k1:
-      value: |
-        -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEZFQZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        ------END EC PRIVATE KEY-----
-    ecdsaSecp384r1:
-      value: |
-       -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEZFQZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        ------END EC PRIVATE KEY-----
 
 synapse:
   enabled: false
