Introduce "element-io.synapse.matrixToolsEnv" to generate secret env vars.

--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -96,93 +96,7 @@ We have an init container to render & merge the config for several reasons:
         - /config-templates/04-homeserver-overrides.yaml
         - /config-templates/05-{{ $processType }}.yaml
         env:
-          {{- /* The filesystem structure is `/secrets`/<< secret name>>/<< secret key >>.
-                 The non-defaulted values are handling the case where the credential is provided by an existing Secret
-                 The default values are handling the case where the credential is provided plain in the Helm chart and we add it to our Secret with a well-known key.
-
-                 These could be done as env vars with valueFrom.secretKeyRef, but that triggers CKV_K8S_35.
-                 Environment variables values found in the config file as ${VARNAME} are parsed through go template engine before being replaced in the target file.
-          */}}
-          - name: SYNAPSE_MACAROON
-            value: >-
-              {{
-                printf "{{ readfile \"/secrets/%s\" | quote }}" (
-                    include "element-io.ess-library.init-secret-path" (
-                      dict "root" $
-                      "context" (dict
-                        "secretProperty" .macaroon
-                        "initSecretKey" "SYNAPSE_MACAROON"
-                        "defaultSecretName" (printf "%s-synapse" $.Release.Name)
-                        "defaultSecretKey" "MACAROON"
-                      )
-                    )
-                  )
-              }}
-          - name: SYNAPSE_POSTGRES_PASSWORD
-            value: >-
-              {{
-                printf "{{ readfile \"/secrets/%s\" | quote }}"
-                  (
-                    include "element-io.ess-library.provided-secret-path" (
-                      dict "root" $
-                      "context" (dict
-                        "secretProperty" .postgres.password
-                        "defaultSecretName" (printf "%s-synapse" $.Release.Name)
-                        "defaultSecretKey" "POSTGRES_PASSWORD"
-                      )
-                    )
-                  )
-              }}
-          - name: SYNAPSE_REGISTRATION_SHARED_SECRET
-            value: >-
-              {{
-                printf "{{ readfile \"/secrets/%s\" | quote }}"
-                  (
-                    include "element-io.ess-library.provided-secret-path" (
-                      dict "root" $
-                      "context" (dict
-                        "secretProperty" .registrationSharedSecret
-                        "defaultSecretName" (printf "%s-synapse" $.Release.Name)
-                        "defaultSecretKey" "REGISTRATION_SHARED_SECRET"
-                      )
-                    )
-                  )
-              }}
-{{- if $.Values.matrixAuthenticationService.enabled }}
-          - name: MAS_SHARED_SECRET
-            value: >-
-              {{
-              printf "{{ readfile \"/secrets/%s\" | quote }}" (
-                 include "element-io.ess-library.init-secret-path" (
-                     dict "root" $
-                     "context" (dict
-                       "secretProperty" $.Values.matrixAuthenticationService.synapseSharedSecret
-                       "initSecretKey" "MAS_SYNAPSE_SHARED_SECRET"
-                       "defaultSecretName" (printf "%s-matrix-authentication-service" $.Release.Name)
-                       "defaultSecretKey" "SYNAPSE_SHARED_SECRET"
-                     )
-                  )
-                )
-              }}
-          - name: MAS_OIDC_CLIENT_SECRET
-            value: >-
-              {{
-                printf "{{ readfile \"/secrets/%s\" | quote }}" (
-                  include "element-io.ess-library.init-secret-path" (
-                      dict "root" $
-                      "context" (dict
-                        "secretProperty" $.Values.matrixAuthenticationService.synapseOIDCClientSecret
-                        "initSecretKey" "MAS_SYNAPSE_OIDC_CLIENT_SECRET"
-                        "defaultSecretName" (printf "%s-matrix-authentication-service" $.Release.Name)
-                        "defaultSecretKey" "SYNAPSE_OIDC_CLIENT_SECRET"
-                      )
-                    )
-                  )
-              }}
-{{- end }}
-          - name: APPLICATION_NAME
-            value: >-
-              {{ printf "{{ hostname | replace \"-synapse-\" \"\" }}" }}
+          {{- include "element-io.synapse.matrixToolsEnv" (dict "root" $ "context" .) | nindent 10 }}
           {{- include "element-io.synapse.env" (dict "root" $ "context" .) | nindent 10 }}
 {{- with .resources }}
         resources:
